# unipd-pc-homework

./: .gitattributes  License  README.md
homework/: .gitignore  CMakeLists.txt  basic_matrix.cpp  basic_matrix.h  input10.txt  input1000_40.txt  input1000_8.txt  input100_4.txt  input1200_16.txt  input300_12.txt  input500_4.txt  input6.txt  input600_200.txt  input600_24.txt  input60_12.txt  main.cpp  matrix.cpp  matrix.h  matrix_matrix.cpp  matrix_matrix.h  parallel.cpp  parallel2.cpp  sequential.cpp  sequential.h
homework/input/: input10.txt  input100_20.txt  input12.txt  input1200_16.txt  input5.txt  input500_4.txt  input6000_16.txt  input60_20.txt  input8000_64.txt
poster/: beamercolorthemeunipd-light.sty  beamercolorthemeunipd.sty  beamerthemegemini.sty  package.tex  poster.aux  poster.blg  poster.fdb_latexmk  poster.fls  poster.tex  poster.xdv
poster/media/: img22.tikz
report/: .gitignore  0_abstract.tex  10_implementation_mpi.tex  10_performance.tex  1_introduction.tex  20_performance.tex  2_trivial_parallelisation.tex  2_trivial_parallelization.tex  3_blocked_parallelisation.tex  3_blocked_parallelization.tex  3_matrix_parallelisation.tex  4_parallelisation.tex  4_squared_parallelization.tex  99_conclusions.tex  aaai21.sty  main.tex  preamble.tex  references.bib
report/media/: commimpact.tikz  commimpact1000_40.csv  commimpact1000_8.csv  commimpact100_20.csv  commimpact600_24.csv  data_dependencies_1.tikz  data_dependencies_2.tikz  data_dependencies_3.tikz  data_dependencies_4.tikz  data_dependencies_5.tikz  data_dependencies_block.tikz  data_dependencies_block_1.tikz  data_dependencies_block_2.tikz  data_dependencies_block_4.tikz  example_floyd_warshall.tikz  graph_data_dependencies_o.tikz  graph_data_dependencies_v.tikz  speedup.tikz  square_dependencies_algo.tikz  square_dependencies_algo_mod.tikz  square_dependencies_algo_thread.tikz  time.csv  time.tikz  wait.csv
